# hackathon_todo

./: .gitignore  AUTHENTICATION_ENHANCEMENTS.md  AUTHENTICATION_SOLUTION.md  CLAUDE.md  Dockerfile  FINAL_CONFIRMATION.md  FREE_OPTIONS.md  FRONTEND_FIXES.md  HF_MIGRATION_GUIDE.md  INTEGRATION_COMPLETE.md  README.md  RUNNING.md  RUNNING_INSTRUCTIONS.md  add_test_user.py  build.sh  docker-compose.yml  documents.txt  nginx.conf  pyrightconfig.json  supervisord.conf  test_tasks_api.py
.claude/agents/: cli-interaction-handler.md  task-lifecycle.md  todo-architect.md
.claude/skills/: ConsoleRenderSkill.md  InMemoryStoreSkill.md  InputValidationSkill.md  SpecComplianceSkill.md  TaskCompletionSkill.md  TaskCreationSkill.md  TaskDeletionSkill.md  TaskListingSkill.md  TaskUpdateSkill.md
.cursor/: settings.json
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  README.md  add_test_user.py  init_db.py  main.py  requirements.txt  reset_test_user.py  test_agent_behaviors.py  test_ai_chatbot.py
backend/migrations/: 001_phase_v_indexes.sql
backend/src/: config.py  main.py
dapr/components/: pubsub.yaml  (+1 more)
docs/: k8s-setup.md
frontend/: .dockerignore  .env.production  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
todo_console/: README.md  __init__.py  main.py  pyproject.toml
todo_console/cli/: __init__.py  input.py  menu.py  render.py
todo_console/models/: __init__.py  task.py
todo_console/services/: __init__.py  operations.py  storage.py
todo_console/tests/: test_task_operations.py
(+202 files in other folders)
